Driver/little_duckParser.py
# Generated from little_duck.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class little_duckParser ( Parser ):

    grammarFileName = "little_duck.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'<'", "'>'", "'!='", "'='", "'('", "')'", "'{'", 
                     "'}'", "','", "';'", "'if'", "'else'", "'do'", "'while'", 
                     "'var'", "'float'", "'int'", "'printf'", "'program'", 
                     "'end'", "'void'", "'main'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "MAS", "MENOS", "POR", "DIV", "MENOR", "MAYOR", "DIF", 
                      "IGUAL", "PARI", "PARD", "LLAVEI", "LLAVED", "COMA", 
                      "PUNTOYCOMA", "IF", "ELSE", "DO", "WHILE", "VAR", 
                      "FLOAT", "INT", "PRINTF", "PROGRAM", "END", "VOID", 
                      "MAIN", "ID", "CTE_FLOAT", "CTE_INT", "CTE_STRING", 
                      "WS" ]

    RULE_start_ = 0
    RULE_vars = 1
    RULE_var0 = 2
    RULE_var1 = 3
    RULE_var2 = 4
    RULE_type = 5
    RULE_body = 6
    RULE_statement = 7
    RULE_assign = 8
    RULE_print = 9
    RULE_print0 = 10
    RULE_print1 = 11
    RULE_cycle = 12
    RULE_condition = 13
    RULE_condition0 = 14
    RULE_expression = 15
    RULE_expression0 = 16
    RULE_expression1 = 17
    RULE_exp = 18
    RULE_exp0 = 19
    RULE_exp1 = 20
    RULE_cte = 21
    RULE_termino = 22
    RULE_termino0 = 23
    RULE_termino1 = 24
    RULE_factor = 25
    RULE_factor0 = 26
    RULE_factor1 = 27
    RULE_funcs = 28
    RULE_funcs0 = 29
    RULE_funcs1 = 30
    RULE_funcs2 = 31
    RULE_funcs3 = 32
    RULE_f_call = 33
    RULE_f_call0 = 34
    RULE_f_call1 = 35
    RULE_f_call2 = 36

    ruleNames =  [ "start_", "vars", "var0", "var1", "var2", "type", "body", 
                   "statement", "assign", "print", "print0", "print1", "cycle", 
                   "condition", "condition0", "expression", "expression0", 
                   "expression1", "exp", "exp0", "exp1", "cte", "termino", 
                   "termino0", "termino1", "factor", "factor0", "factor1", 
                   "funcs", "funcs0", "funcs1", "funcs2", "funcs3", "f_call", 
                   "f_call0", "f_call1", "f_call2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    MAS=4
    MENOS=5
    POR=6
    DIV=7
    MENOR=8
    MAYOR=9
    DIF=10
    IGUAL=11
    PARI=12
    PARD=13
    LLAVEI=14
    LLAVED=15
    COMA=16
    PUNTOYCOMA=17
    IF=18
    ELSE=19
    DO=20
    WHILE=21
    VAR=22
    FLOAT=23
    INT=24
    PRINTF=25
    PROGRAM=26
    END=27
    VOID=28
    MAIN=29
    ID=30
    CTE_FLOAT=31
    CTE_INT=32
    CTE_STRING=33
    WS=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(little_duckParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def MAIN(self):
            return self.getToken(little_duckParser.MAIN, 0)

        def body(self):
            return self.getTypedRuleContext(little_duckParser.BodyContext,0)


        def END(self):
            return self.getToken(little_duckParser.END, 0)

        def vars_(self):
            return self.getTypedRuleContext(little_duckParser.VarsContext,0)


        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.FuncsContext)
            else:
                return self.getTypedRuleContext(little_duckParser.FuncsContext,i)


        def getRuleIndex(self):
            return little_duckParser.RULE_start_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_" ):
                listener.enterStart_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_" ):
                listener.exitStart_(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart_" ):
                return visitor.visitStart_(self)
            else:
                return visitor.visitChildren(self)




    def start_(self):

        localctx = little_duckParser.Start_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(little_duckParser.PROGRAM)
            self.state = 75
            self.match(little_duckParser.ID)
            self.state = 76
            self.match(little_duckParser.PUNTOYCOMA)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==22:
                self.state = 77
                self.vars_()


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==28:
                self.state = 80
                self.funcs()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(little_duckParser.MAIN)
            self.state = 87
            self.body()
            self.state = 88
            self.match(little_duckParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(little_duckParser.VAR, 0)

        def var0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.Var0Context)
            else:
                return self.getTypedRuleContext(little_duckParser.Var0Context,i)


        def getRuleIndex(self):
            return little_duckParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = little_duckParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(little_duckParser.VAR)
            self.state = 92 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 91
                self.var0()
                self.state = 94 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==30):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var1(self):
            return self.getTypedRuleContext(little_duckParser.Var1Context,0)


        def type_(self):
            return self.getTypedRuleContext(little_duckParser.TypeContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def var2(self):
            return self.getTypedRuleContext(little_duckParser.Var2Context,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_var0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar0" ):
                listener.enterVar0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar0" ):
                listener.exitVar0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar0" ):
                return visitor.visitVar0(self)
            else:
                return visitor.visitChildren(self)




    def var0(self):

        localctx = little_duckParser.Var0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var0)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.var1(0)
            self.state = 97
            self.match(little_duckParser.T__0)
            self.state = 98
            self.type_()
            self.state = 99
            self.match(little_duckParser.PUNTOYCOMA)
            self.state = 100
            self.var2()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def var1(self):
            return self.getTypedRuleContext(little_duckParser.Var1Context,0)


        def COMA(self):
            return self.getToken(little_duckParser.COMA, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_var1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar1" ):
                listener.enterVar1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar1" ):
                listener.exitVar1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar1" ):
                return visitor.visitVar1(self)
            else:
                return visitor.visitChildren(self)



    def var1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = little_duckParser.Var1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_var1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(little_duckParser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 110
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = little_duckParser.Var1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_var1)
                    self.state = 105
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 106
                    self.match(little_duckParser.COMA)
                    self.state = 107
                    self.match(little_duckParser.ID) 
                self.state = 112
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Var2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var1(self):
            return self.getTypedRuleContext(little_duckParser.Var1Context,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_var2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar2" ):
                listener.enterVar2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar2" ):
                listener.exitVar2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar2" ):
                return visitor.visitVar2(self)
            else:
                return visitor.visitChildren(self)




    def var2(self):

        localctx = little_duckParser.Var2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 113
                self.var1(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FLOAT(self):
            return self.getToken(little_duckParser.FLOAT, 0)

        def INT(self):
            return self.getToken(little_duckParser.INT, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = little_duckParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            _la = self._input.LA(1)
            if not(_la==23 or _la==24):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVEI(self):
            return self.getToken(little_duckParser.LLAVEI, 0)

        def LLAVED(self):
            return self.getToken(little_duckParser.LLAVED, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(little_duckParser.StatementContext)
            else:
                return self.getTypedRuleContext(little_duckParser.StatementContext,i)


        def getRuleIndex(self):
            return little_duckParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = little_duckParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(little_duckParser.LLAVEI)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1108606976) != 0):
                self.state = 119
                self.statement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(little_duckParser.LLAVED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(little_duckParser.AssignContext,0)


        def condition(self):
            return self.getTypedRuleContext(little_duckParser.ConditionContext,0)


        def cycle(self):
            return self.getTypedRuleContext(little_duckParser.CycleContext,0)


        def f_call(self):
            return self.getTypedRuleContext(little_duckParser.F_callContext,0)


        def print_(self):
            return self.getTypedRuleContext(little_duckParser.PrintContext,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = little_duckParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.condition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 129
                self.cycle()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 130
                self.f_call()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 131
                self.print_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(little_duckParser.ID, 0)

        def IGUAL(self):
            return self.getToken(little_duckParser.IGUAL, 0)

        def expression(self):
            return self.getTypedRuleContext(little_duckParser.ExpressionContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = little_duckParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(little_duckParser.ID)
            self.state = 135
            self.match(little_duckParser.IGUAL)
            self.state = 136
            self.expression()
            self.state = 137
            self.match(little_duckParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINTF(self):
            return self.getToken(little_duckParser.PRINTF, 0)

        def PARI(self):
            return self.getToken(little_duckParser.PARI, 0)

        def print0(self):
            return self.getTypedRuleContext(little_duckParser.Print0Context,0)


        def PARD(self):
            return self.getToken(little_duckParser.PARD, 0)

        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_print

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)




    def print_(self):

        localctx = little_duckParser.PrintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_print)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(little_duckParser.PRINTF)
            self.state = 140
            self.match(little_duckParser.PARI)
            self.state = 141
            self.print0()
            self.state = 142
            self.match(little_duckParser.PARD)
            self.state = 143
            self.match(little_duckParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(little_duckParser.ExpressionContext,0)


        def print1(self):
            return self.getTypedRuleContext(little_duckParser.Print1Context,0)


        def CTE_STRING(self):
            return self.getToken(little_duckParser.CTE_STRING, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_print0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint0" ):
                listener.enterPrint0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint0" ):
                listener.exitPrint0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint0" ):
                return visitor.visitPrint0(self)
            else:
                return visitor.visitChildren(self)




    def print0(self):

        localctx = little_duckParser.Print0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_print0)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 5, 12, 30, 31, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.expression()
                self.state = 146
                self.print1()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(little_duckParser.CTE_STRING)
                self.state = 149
                self.print1()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMA(self):
            return self.getToken(little_duckParser.COMA, 0)

        def print0(self):
            return self.getTypedRuleContext(little_duckParser.Print0Context,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_print1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint1" ):
                listener.enterPrint1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint1" ):
                listener.exitPrint1(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint1" ):
                return visitor.visitPrint1(self)
            else:
                return visitor.visitChildren(self)




    def print1(self):

        localctx = little_duckParser.Print1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_print1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 152
                self.match(little_duckParser.COMA)
                self.state = 153
                self.print0()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CycleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(little_duckParser.DO, 0)

        def body(self):
            return self.getTypedRuleContext(little_duckParser.BodyContext,0)


        def WHILE(self):
            return self.getToken(little_duckParser.WHILE, 0)

        def PARI(self):
            return self.getToken(little_duckParser.PARI, 0)

        def expression(self):
            return self.getTypedRuleContext(little_duckParser.ExpressionContext,0)


        def PARD(self):
            return self.getToken(little_duckParser.PARD, 0)

        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_cycle

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCycle" ):
                listener.enterCycle(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCycle" ):
                listener.exitCycle(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCycle" ):
                return visitor.visitCycle(self)
            else:
                return visitor.visitChildren(self)




    def cycle(self):

        localctx = little_duckParser.CycleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_cycle)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(little_duckParser.DO)
            self.state = 157
            self.body()
            self.state = 158
            self.match(little_duckParser.WHILE)
            self.state = 159
            self.match(little_duckParser.PARI)
            self.state = 160
            self.expression()
            self.state = 161
            self.match(little_duckParser.PARD)
            self.state = 162
            self.match(little_duckParser.PUNTOYCOMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(little_duckParser.IF, 0)

        def PARI(self):
            return self.getToken(little_duckParser.PARI, 0)

        def expression(self):
            return self.getTypedRuleContext(little_duckParser.ExpressionContext,0)


        def PARD(self):
            return self.getToken(little_duckParser.PARD, 0)

        def body(self):
            return self.getTypedRuleContext(little_duckParser.BodyContext,0)


        def condition0(self):
            return self.getTypedRuleContext(little_duckParser.Condition0Context,0)


        def getRuleIndex(self):
            return little_duckParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = little_duckParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(little_duckParser.IF)
            self.state = 165
            self.match(little_duckParser.PARI)
            self.state = 166
            self.expression()
            self.state = 167
            self.match(little_duckParser.PARD)
            self.state = 168
            self.body()
            self.state = 169
            self.condition0()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition0Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(little_duckParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(little_duckParser.BodyContext,0)


        def PUNTOYCOMA(self):
            return self.getToken(little_duckParser.PUNTOYCOMA, 0)

        def getRuleIndex(self):
            return little_duckParser.RULE_condition0

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition0" ):
                listener.enterCondition0(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition0" ):
                listener.exitCondition0(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition0" ):
                return visitor.visitCondition0(self)
            else:
                return visitor.visitChildren(self)




    def condition0(self):
